src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dwP0.25-dhP0.5-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: P0.25\ndefault window height: P0.5\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
